--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header>
         <h1>Welcome to our website</h1>
     </header>
+
+    <main>
+        <div class="container">
+            <h2>Our products</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Id alias dolorum amet ullam recusandae perspiciatis temporibus, 
+                magnam hic rerum officia dolore consectetur dolor explicabo quam
+                 nulla qui nemo nam modi.
+            </p>
+        </div>
+    </main>
     
 </body>
 </html>
